CSS/style.css
body {
    background-image: url('../images/map4.jpg');
    background-size: cover;
    background-position: center;
}
/*navbar styling*/
.image {
    padding: 10px;
}

.navbar {
  background-color: #1e3d59;
}
.hero-body {
  background-color: #1e3d59;
}
/*search bar styling*/
#searchbar {
    max-width: 50%;
}
input{
    text-align:center;
 }

 .button {
    color: #ffc13b; 
    background-color:#1e3d59;
    border: none;
 }
 .button:hover{
  background-color: #706f6c;   
 }
 
/*styling for UV index conditions */
.favorable {
    color: green; 
    font-weight:bolder
}
  
.moderate {
    color: orange; 
    font-weight:bolder
}
  
.severe {
    color: red;
    font-weight:bolder
} 

/*5 day forecast modal styling*/

.forecastbox {
    text-align: center;
    max-height: calc(80% - 10px);
    overflow-y: auto;
    width:30%;
}


  
  /*styling for portfolio links bar */
  #menu ul {
    margin: 0;
    padding: 0;
  }
  
  #menu .main-menu {
    display: none;
  }
  
  #tm:checked + .main-menu {
    display: block;
  }
  
  #menu input[type="checkbox"], 
  #menu ul span.drop-icon {
    display: none;
  }
  
  #menu li, 
  #toggle-menu {
    border-style: solid;
    border-color: rgba(0, 0, 0, .05);
  }
  
  #menu li, 
  #toggle-menu {
    border-width: 0 0 1px;
  }
  
  #menu li, 
  #toggle-menu, 
  #menu a {
    position: relative;
    display: block;
    color: #1e3d59;
    text-shadow: 1px 1px 0 rgba(0, 0, 0, .125);
  }
  
  #menu, 
  #toggle-menu {
    background-color: #ffc13b;
  }
  
  #toggle-menu, 
  #menu a {
    padding: 1em 1.5em;
  }
  
  #menu a {
    transition: all .125s ease-in-out;
    -webkit-transition: all .125s ease-in-out;
  }



@media screen and (max-width: 1050px) {
    .forecastbox {
       width: 45%;
    }
    .forecastbox p {
        font-size: 15px;
    }

 }

 

